--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,14 @@ decorator==5.1.1
 executing==1.2.0
 fonttools==4.39.4
 ipykernel==6.23.1
+ipympl==0.9.3
 ipython==8.13.2
+ipython-genutils==0.2.0
+ipywidgets==8.0.6
 jedi==0.18.2
 jupyter_client==8.2.0
 jupyter_core==5.3.0
+jupyterlab-widgets==3.0.7
 kiwisolver==1.4.4
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
@@ -40,3 +44,4 @@ tornado==6.3.2
 traitlets==5.9.0
 tzdata==2023.3
 wcwidth==0.2.6
+widgetsnbextension==4.0.7
